fixed line height, dynamic farm layout shifting, up comp lib

--- a/src/App.less
+++ b/src/App.less
@@ -17,6 +17,7 @@
 * {
   font-family: 'Nunito Sans', sans-serif;
   -ms-overflow-style: none !important;
+  line-height: 1.15;
   &::selection {
     background: #5755ff;
   }
